--- a/branches/oma2_threaded/oma2/oma2/en.lproj/MainMenu.xib
+++ b/branches/oma2_threaded/oma2/oma2/en.lproj/MainMenu.xib
@@ -232,7 +232,7 @@
             </items>
         </menu>
         <window title="oma2" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="371">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="0.0" y="0.0" width="600" height="354"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="778"/>
